[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "runcrate-sdk"
version = "0.1.2"
description = "Official Python SDK for the Runcrate API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [ "httpx>=0.25.0,<1.0", "pydantic>=2.0,<3.0",]
[[project.authors]]
name = "Runcrate"
email = "support@runcrate.ai"

[project.urls]
Homepage = "https://runcrate.ai"
Repository = "https://github.com/aeonmindai/runcrate-py"
Documentation = "https://runcrate.ai/docs"

[project.optional-dependencies]
dev = [ "pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21", "ruff>=0.4", "mypy>=1.0",]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = [ "src/runcrate",]
